Se realizan los siguientes cambios " - el archivo restart, se desactiva el prune para evitar descargar las imagenes base de manera recurrente - en el archivo contacts_db.py, se agregan 2 lineas que permiten localizar al archivo agenda.csv - en el archivo agenda.py se cambian varias variables para evitar que sean reconocidas por python como archivos diferente (de query a search_query)

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - 9000:9000
     volumes:
-      - ./app:/app
+      - ./src:/src
     restart: unless-stopped
     networks:
       - playnet
