--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
         limits:
           memory: 256M
     ports:
-      - 9000:9000
+      - 8050:8050
     volumes:
       - ./src:/src
     restart: unless-stopped
@@ -19,6 +19,7 @@ networks:
   playnet:
     name: playnet
     driver: bridge
+    enable_ipv6: false
     ipam:
       config:
         - subnet: 10.15.0.0/24
