se agrega variable de entorno tzdata en compose para solucionar tema de fechas se cambia icono de inicio de sesion a un molino de viento de papel (algo generico) se trabaja en modificaciones esteticas para darle mas uniformidad al proyecto

--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,8 @@ services:
       - 8050:8050
     volumes:
       - ./src:/src
+    environment:
+      - TZ=America/Panama
     restart: unless-stopped
     networks:
       - playnet
